fixing IZ#168621:[code model] Dwarf reader exception/ Parsing errors